# browser_proxy

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  DOCKER.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  config.toml.example  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml
src/: config.rs  main.rs
src/middleware/: domain_filter.rs  logging.rs  mod.rs
src/proxy/: css_handler.rs  default_handler.rs  factory.rs  handler.rs  html_handler.rs  mod.rs
src/routes/: app.rs  mod.rs  proxy.rs
templates/: base.html  error.html  home.html  login.html
